src/test/deca/context/valid/test_pass_2_protected_field.deca
// Description:
//    Program testing pass 1, only one protected non class type field in a object
//
// Results:
//    ok
//
// History:
//    Created on 17/01/2025

class Test{
    protected int x = 3;
}
