src/test/deca/context/invalid/test_pass_2_field_method_same_name.deca
// Description:
//    Program testing pass 2, declare a field with a method name
//
// Results:
//    ok
//
// History:
//    Created on 14/01/2025


class Test{

    void x(){
	
    }

    int x;

}

